--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
+body {
+  text-align: center;
+  background: radial-gradient(
+    circle at 18.7% 37.8%,
+    rgb(250, 250, 250) 0%,
+    rgb(225, 234, 238) 90%
+  );
+}
+
 img {
   display: block;
   margin: 40px auto;
