--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
   background: radial-gradient(
     circle at 18.7% 37.8%,
